namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-health-and-medication-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-health-and-medication-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    cloud-platform.justice.gov.uk/namespace: "hmpps-health-and-medication-api-dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "connect-dps"
    cloud-platform.justice.gov.uk/application: "hmpps-health-and-medication-api"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-health-and-medication-api"
    cloud-platform.justice.gov.uk/team-name: "connect-dps"
